--- a/.project-settings.yml
+++ b/.project-settings.yml
@@ -5,12 +5,12 @@ module-template: ! 'module MODULE_NAME where
 
 '
 extensions:
+  DeriveGeneric: true
   RankNTypes: true
 environment: ghc-7.8-stable-14.09
 auto-hidden: []
 cabal-file: project.cabal
 version: 1
 extra-packages: ''
-ghc-args:
-- -Wall
+ghc-args: []
 excluded-modules: []
