--- a/.project-settings.yml
+++ b/.project-settings.yml
@@ -13,6 +13,5 @@ auto-hidden: []
 cabal-file: project.cabal
 version: 1
 extra-packages: ''
-ghc-args:
-- -fdefer-type-errors
+ghc-args: []
 excluded-modules: []
