Added basic material

--- a/.project-settings.yml
+++ b/.project-settings.yml
@@ -13,5 +13,6 @@ auto-hidden: []
 cabal-file: project.cabal
 version: 1
 extra-packages: ''
-ghc-args: []
+ghc-args:
+- -fdefer-type-errors
 excluded-modules: []
