RectLight with soft shadows (1 shadow sample per path)

--- a/.project-settings.yml
+++ b/.project-settings.yml
@@ -7,6 +7,7 @@ module-template: ! 'module MODULE_NAME where
 extensions:
   DeriveGeneric: true
   RankNTypes: true
+  MultiParamTypeClasses: true
   FlexibleContexts: true
 environment: ghc-7.8-stable-14.09
 auto-hidden: []
@@ -14,5 +15,6 @@ cabal-file: project.cabal
 version: 1
 extra-packages: ''
 ghc-args:
+- -Wall
 - -fdefer-type-errors
 excluded-modules: []
