Initial dimensional support of type (V3 Dimensional Float)

--- a/.project-settings.yml
+++ b/.project-settings.yml
@@ -16,6 +16,5 @@ auto-hidden: []
 cabal-file: project.cabal
 version: 1
 extra-packages: ''
-ghc-args:
-- -fdefer-type-errors
+ghc-args: []
 excluded-modules: []
