--- a/cgraytrace.cabal
+++ b/cgraytrace.cabal
@@ -28,7 +28,8 @@ executable cgraytrace
                        tf-random,
                        mersenne-random-pure64,
                        parallel,
-                       vector
+                       vector,
+                       dimensional
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -threaded -O2 -optc-O3 -funfolding-use-threshold=16 -with-rtsopts=-N
@@ -49,7 +50,8 @@ executable cgraytrace_prof_thread
                        tf-random,
                        mersenne-random-pure64,
                        parallel,
-                       vector
+                       vector,
+                       dimensional
   hs-source-dirs:      src
   default-language:    Haskell2010
   --ghc-options:         -Wall -threaded -eventlog -rtsopts -O2 -optc-O3 -funfolding-use-threshold=16 "-with-rtsopts=-N -ls"
