--- a/.project-settings.yml
+++ b/.project-settings.yml
@@ -7,14 +7,17 @@ module-template: ! 'module MODULE_NAME where
 
 '
 extensions:
+  FlexibleInstances: true
   DeriveGeneric: true
   RankNTypes: true
   MultiParamTypeClasses: true
+  BangPatterns: true
   FlexibleContexts: true
 environment: ghc-7.8-stable-14.09
 auto-hidden: []
 cabal-file: project.cabal
 version: 1
 extra-packages: ''
-ghc-args: []
+ghc-args:
+- -Wall
 excluded-modules: []
