--- a/cgraytrace.cabal
+++ b/cgraytrace.cabal
@@ -3,7 +3,7 @@
 
 name:                cgraytrace
 version:             0.1.0.0
--- synopsis:
+synopsis:            Simple raytracer made as an demonstration for CG^2 seminar (Sofia, Bulgaria)
 -- description:
 license:             PublicDomain
 -- license-file:        LICENSE
@@ -12,24 +12,17 @@ maintainer:          vasil.keremidchiev@chaosgroup.com
 -- copyright:
 category:            Graphics
 build-type:          Simple
--- extra-source-files:
 cabal-version:       >=1.10
 
-executable cgraytrace
-  main-is:             Main.hs
-  -- other-modules:
+library
   default-extensions:  BangPatterns
                      , DeriveGeneric
-                     , FlexibleContexts
                      , FlexibleInstances
                      , GeneralizedNewtypeDeriving
                      , MultiParamTypeClasses
-                     , NoMonomorphismRestriction
-                     , QuasiQuotes
                      , RankNTypes
-                     , TemplateHaskell
-                     , TypeFamilies
-  other-modules:      BRDF
+                     
+  exposed-modules:    BRDF
                     , Camera
                     , Geometry
                     , Light
@@ -37,17 +30,32 @@ executable cgraytrace
                     , Math
                     , Raytracer 
                     , Scene
+
   build-depends:       base,
                        deepseq,
-                       yesod,
                        JuicyPixels,
                        linear,
                        random,
-                       tf-random,
-                       mersenne-random-pure64,
                        parallel,
                        vector,
                        dimensional
+                       
+  hs-source-dirs:      Lib
+  default-language:    Haskell2010
+  ghc-options:         -Wall -O2 -optc-O3 -funfolding-use-threshold=16
+
+executable cgraytrace
+  main-is:             Main.hs
+
+--  default-extensions:  
+
+  build-depends:       base
+                     , cgraytrace
+                     , yesod
+                     , JuicyPixels
+                     , tf-random
+                     , mersenne-random-pure64
+
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -threaded -O2 -optc-O3 -funfolding-use-threshold=16 -with-rtsopts=-N
@@ -57,27 +65,16 @@ executable cgraytrace
 
 executable cgraytrace_prof_thread
   main-is:             Main.hs
-  -- other-modules:
-  default-extensions:  BangPatterns, NoMonomorphismRestriction, QuasiQuotes, TemplateHaskell, TypeFamilies, FlexibleInstances, GeneralizedNewtypeDeriving, DeriveGeneric, RankNTypes, MultiParamTypeClasses, FlexibleContexts
-  other-modules:      BRDF
-                    , Camera
-                    , Geometry
-                    , Light
-                    , Material
-                    , Math
-                    , Raytracer
-                    , Scene  
-  build-depends:       base,
-                       deepseq,
-                       yesod,
-                       JuicyPixels,
-                       linear,
-                       random,
-                       tf-random,
-                       mersenne-random-pure64,
-                       parallel,
-                       vector,
-                       dimensional
+
+--  default-extensions:  
+
+  build-depends:       base
+                     , cgraytrace
+                     , yesod
+                     , JuicyPixels
+                     , tf-random
+                     , mersenne-random-pure64
+                     
   hs-source-dirs:      src
   default-language:    Haskell2010
   --ghc-options:         -Wall -threaded -eventlog -rtsopts -O2 -optc-O3 -funfolding-use-threshold=16 "-with-rtsopts=-N -ls"
