--- a/cgraytrace.cabal
+++ b/cgraytrace.cabal
@@ -44,7 +44,7 @@ library
   default-language:    Haskell2010
   ghc-options:         -Wall -O2 -optc-O3 -funfolding-use-threshold=16
 
-executable cgraytrace
+executable cgraytrace-srv
   main-is:             Main.hs
 
 --  default-extensions:  
@@ -62,6 +62,20 @@ executable cgraytrace
 --  ghc-prof-options:    -Wall -threaded -prof -fprof-auto -rtsopts -O2 -optc-O3 -funfolding-use-threshold=16 "-with-rtsopts=-N -p -s -h -i0.1"
 --  ghc-prof-options:    -prof -fprof-auto -rtsopts -with-rtsopts=-N
 
+executable cgraytrace-exe
+  main-is:             Main.hs
+
+--  default-extensions:  
+
+  build-depends:       base
+                     , cgraytrace
+                     , JuicyPixels
+                     , tf-random
+                     , mersenne-random-pure64
+
+  hs-source-dirs:      App
+  default-language:    Haskell2010
+  ghc-options:         -Wall -threaded -O2 -optc-O3 -funfolding-use-threshold=16 -with-rtsopts=-N
 
 executable cgraytrace_prof_thread
   main-is:             Main.hs
