--- a/cgraytrace.cabal
+++ b/cgraytrace.cabal
@@ -75,7 +75,9 @@ executable cgraytrace-exe
 
   hs-source-dirs:      App
   default-language:    Haskell2010
-  ghc-options:         -Wall -threaded -O2 -optc-O3 -funfolding-use-threshold=16 -with-rtsopts=-N
+  
+  -- Assuming we have 15Mb L3 cache and gen0+ collections are interleaved with non-GC
+  ghc-options:         -Wall -threaded -O2 -optc-O3 -funfolding-use-threshold=16 -rtsopts "-with-rtsopts=-N -A15m -qb0"
 
 executable cgraytrace_prof_thread
   main-is:             Main.hs
@@ -84,11 +86,11 @@ executable cgraytrace_prof_thread
 
   build-depends:       base
                      , cgraytrace
-                     , yesod
                      , JuicyPixels
                      , tf-random
                      , mersenne-random-pure64
-                     
-  hs-source-dirs:      src
+
+  hs-source-dirs:      App
   default-language:    Haskell2010
-  --ghc-options:         -Wall -threaded -eventlog -rtsopts -O2 -optc-O3 -funfolding-use-threshold=16 "-with-rtsopts=-N -ls"
+  ghc-options:         -Wall -threaded -eventlog -rtsopts -O2 -optc-O3 -funfolding-use-threshold=16 "-with-rtsopts=-N -A15m -qb0 -ls -lf"
+
