--- a/stack.yaml
+++ b/stack.yaml
@@ -1,6 +1,9 @@
 flags: {}
 packages:
 - '.'
-extra-deps: []
-resolver: lts-7.15
-
+extra-deps:
+- email-validate-2.3.1
+- yesod-1.4.5
+- yesod-form-1.4.13
+- yesod-persistent-1.4.2
+resolver: nightly-2017-07-31
