--- a/cgraytrace.cabal
+++ b/cgraytrace.cabal
@@ -72,12 +72,13 @@ executable cgraytrace-exe
                      , JuicyPixels
                      , tf-random
                      , mersenne-random-pure64
+                     , time
 
   hs-source-dirs:      App
   default-language:    Haskell2010
   
   -- Assuming we have 15Mb L3 cache and gen0+ collections are interleaved with non-GC
-  ghc-options:         -Wall -threaded -O2 -optc-O3 -funfolding-use-threshold=16 -rtsopts "-with-rtsopts=-N -A15m -qb0"
+  ghc-options:         -Wall -threaded -O3 -optc-O3 -funfolding-use-threshold=16 -rtsopts "-with-rtsopts=-N -qb0"
 
 executable cgraytrace_prof_thread
   main-is:             Main.hs
@@ -89,6 +90,7 @@ executable cgraytrace_prof_thread
                      , JuicyPixels
                      , tf-random
                      , mersenne-random-pure64
+                     , time
 
   hs-source-dirs:      App
   default-language:    Haskell2010
