--- a/stack.yaml
+++ b/stack.yaml
@@ -2,4 +2,135 @@ flags: {}
 packages:
 - '.'
 extra-deps:
-resolver: lts-10.4
+- primitive-0.6.3.0
+- vector-0.12.0.1
+- zlib-0.6.1.2
+- random-1.1
+- scientific-0.3.5.2
+- hashable-1.2.6.1
+- attoparsec-0.13.2.2
+- base-compat-0.9.3
+- dlist-0.8.0.4
+- integer-logarithms-1.0.2
+- tagged-0.8.5
+- th-abstraction-0.2.6.0
+- time-locale-compat-0.1.1.3
+- unordered-containers-0.2.9.0
+- uuid-types-1.0.3
+- old-locale-1.0.0.7
+- transformers-compat-0.6.0.6
+- aeson-1.2.4.0
+- blaze-html-0.9.0.1
+- blaze-markup-0.8.2.0
+- conduit-1.3.0
+- data-default-class-0.1.2.0
+- fast-logger-2.4.11
+- monad-logger-0.3.28.1
+- resourcet-1.2.0
+- semigroups-0.18.4
+- shakespeare-2.0.15
+- streaming-commons-0.1.19
+- wai-3.2.1.1
+- wai-extra-3.0.22.0
+- wai-logger-2.3.1
+- warp-3.2.17
+- yaml-0.8.28
+- yesod-core-1.6.1
+- yesod-form-1.6.1
+- yesod-persistent-1.6.0
+- ansi-terminal-0.8.0.1
+- async-2.2.1
+- auto-update-0.1.4
+- base64-bytestring-1.0.0.1
+- blaze-builder-0.4.0.2
+- byteable-0.1.1
+- byteorder-1.0.4
+- bytestring-builder-0.10.8.1.0
+- case-insensitive-1.2.0.10
+- cereal-0.5.5.0
+- clientsession-0.9.1.2
+- conduit-extra-1.3.0
+- cookie-0.4.3
+- data-default-0.7.1.1
+- deepseq-generics-0.2.0.0
+- easy-file-0.2.1
+- email-validate-2.3.2.2
+- exceptions-0.9.0
+- http-date-0.0.6.1
+- http-types-0.12.1
+- http2-1.6.3
+- iproute-1.7.2
+- lifted-base-0.2.3.11
+- monad-control-1.0.2.3
+- monad-loops-0.4.3
+- mono-traversable-1.0.8.1
+- network-2.6.3.3
+- network-uri-2.6.1.0
+- path-pieces-0.2.1
+- persistent-2.8.1
+- persistent-template-2.5.3.1
+- resource-pool-0.2.3.2
+- safe-0.3.16
+- simple-sendfile-0.2.27
+- stm-chans-3.0.0.4
+- stringsearch-0.3.6.6
+- transformers-base-0.4.4
+- unix-compat-0.5.0.1
+- unliftio-0.2.4.0
+- unliftio-core-0.1.1.0
+- vault-0.3.1.0
+- void-0.7.2
+- word8-0.1.3
+- xss-sanitize-0.3.5.7
+- aeson-compat-0.3.7.1
+- appar-0.1.4
+- cipher-aes-0.2.11
+- colour-2.3.4
+- cprng-aes-0.6.1
+- crypto-api-0.13.3
+- crypto-random-0.0.9
+- css-text-0.1.3.0
+- data-default-instances-containers-0.0.1
+- data-default-instances-dlist-0.0.1
+- data-default-instances-old-locale-0.0.1
+- entropy-0.4
+- haskell-src-meta-0.8.0.2
+- http-api-data-0.3.7.2
+- psqueues-0.2.5.0
+- setenv-0.1.1.3
+- silently-1.2.5
+- skein-1.0.9.4
+- split-0.2.3.3
+- tagsoup-0.14.4
+- typed-process-0.2.1.0
+- utf8-string-1.0.1.1
+- vector-algorithms-0.7.0.1
+- attoparsec-iso8601-1.0.0.0
+- cabal-doctest-1.0.6
+- crypto-cipher-types-0.0.9
+- haskell-src-exts-1.20.1
+- securemem-0.1.9
+- syb-0.7
+- th-orphans-0.13.5
+- uri-bytestring-0.3.1.0
+- cpphs-1.20.8
+- fail-4.9.0.0
+- memory-0.14.14
+- th-lift-0.7.8
+- th-lift-instances-0.1.11
+- th-reify-many-0.1.8
+- basement-0.0.7
+- foundation-0.0.20
+- old-time-1.1.0.3
+- polyparse-1.12
+- th-expand-syns-0.4.4.0
+
+resolver: ghc-8.4.0.20180224
+allow-newer: true
+
+ghc-build: standard
+setup-info:
+  ghc:
+    windows64:
+      8.4.0.20180224:
+        url: https://downloads.haskell.org/~ghc/8.4.1-rc1/ghc-8.4.0.20180224-x86_64-unknown-mingw32.tar.xz
