--- a/stack.yaml
+++ b/stack.yaml
@@ -28,8 +28,14 @@ packages:
     git: https://github.com/varosi/http-api-data.git
     commit: 93ae8c826ee757b40f14a68fd1fef55426dd2eb2
   extra-dep: true
+ 
+- location:
+    git: https://github.com/varosi/dimensional.git
+    commit: 60b84f3cf9dac6b58b838b605385df86a68b326e
+  extra-dep: true 
   
 extra-deps:
+- ieee754-0.8.0
 - securemem-0.1.10
 - bifunctors-5.5.2
 - uri-bytestring-0.3.1.1
@@ -149,7 +155,6 @@ extra-deps:
 - polyparse-1.12
 - th-expand-syns-0.4.4.0
 - JuicyPixels-3.2.9.4
-- dimensional-1.0.1.3
 - linear-1.20.7
 - mersenne-random-pure64-0.2.2.0
 - parallel-3.2.1.1
