--- a/cgraytrace.cabal
+++ b/cgraytrace.cabal
@@ -96,3 +96,18 @@ executable cgraytrace_prof_thread
   default-language:    Haskell2010
   ghc-options:         -Wall -threaded -eventlog -rtsopts -O3 -optc-O3 -funfolding-use-threshold=16 "-with-rtsopts=-N -A15m -qb0 -ls -lf"
 
+  
+benchmark cgraytrace-bench
+  type:                exitcode-stdio-1.0
+  main-is:             MainBench.hs
+
+  build-depends:       base
+                     , cgraytrace
+                     , tf-random
+                     , mersenne-random-pure64
+                     , criterion
+
+  hs-source-dirs:      App
+  default-language:    Haskell2010
+  
+  ghc-options:         -Wall -threaded -O3 -optc-O3 -funfolding-use-threshold=16 -rtsopts "-with-rtsopts=-N -qb0"
