--- a/stack.yaml
+++ b/stack.yaml
@@ -30,6 +30,26 @@ packages:
   extra-dep: true   
   
 extra-deps:
+- abstract-deque-0.3
+- abstract-par-0.3.3
+- monad-par-extras-0.3.3
+- Only-0.1
+- erf-2.0.0.0
+- math-functions-0.2.1.0
+- monad-par-0.3.4.8
+- vector-binary-instances-0.2.4
+- vector-th-unbox-0.2.1.6
+- Glob-0.9.2
+- ansi-wl-pprint-0.6.8.2
+- cassava-0.5.1.0
+- code-page-0.1.3
+- js-flot-0.8.3
+- js-jquery-3.3.1
+- microstache-1.0.1.1
+- mwc-random-0.13.6.0
+- optparse-applicative-0.14.2.0
+- statistics-0.14.0.2
+- criterion-1.4.0.0
 - email-validate-2.3.2.3
 - integer-logarithms-1.0.2.1
 - dimensional-1.1
