--- a/stack.yaml
+++ b/stack.yaml
@@ -201,4 +201,4 @@ setup-info:
   ghc:
     windows64:
       8.4.0.20180224:
-        url: https://downloads.haskell.org/~ghc/8.4.1-rc1/ghc-8.4.0.20180224-x86_64-unknown-mingw32.tar.xz
+        url: https://downloads.haskell.org/~ghc/8.4.1/ghc-8.4.1-x86_64-unknown-mingw32.tar.xz
