--- a/stack.yaml
+++ b/stack.yaml
@@ -27,6 +27,11 @@ packages:
 - location:
     git: https://github.com/haskell-suite/haskell-src-exts.git
     commit: 935f6f0915e89c314b686bdbdc6980c72335ba3c
+  extra-dep: true
+  
+- location:
+    git: https://github.com/haskell-hvr/deepseq-generics.git
+    commit: b4044c8b29cb705a3cec1670b64e919859ce2971
   extra-dep: true   
   
 extra-deps:
@@ -104,7 +109,6 @@ extra-deps:
 - conduit-extra-1.3.0
 - cookie-0.4.3
 - data-default-0.7.1.1
-- deepseq-generics-0.2.0.0
 - easy-file-0.2.1
 - exceptions-0.9.0
 - http-date-0.0.6.1
@@ -144,7 +148,7 @@ extra-deps:
 - data-default-instances-containers-0.0.1
 - data-default-instances-dlist-0.0.1
 - data-default-instances-old-locale-0.0.1
-- entropy-0.4
+- entropy-0.4.1.1
 - haskell-src-meta-0.8.0.2
 - psqueues-0.2.5.0
 - setenv-0.1.1.3
