--- a/stack.yaml
+++ b/stack.yaml
@@ -5,181 +5,7 @@ flags:
 packages:
 - '.'
 
-- location:
-    git: https://github.com/varosi/haskell-src-meta.git
-    commit: 5b6deee14f7834495a0a7c66537e6dc9b959dd76
-  extra-dep: true    
-  
 extra-deps:
-- deepseq-1.4.3.0
-- bytestring-0.10.8.2
-- haskell-src-exts-1.20.2
-- deepseq-generics-0.2.0.0
-- cabal-doctest-1.0.6
-- hashable-1.2.7.0
-- blaze-builder-0.4.1.0
-- http-api-data-0.3.8.1
-- abstract-deque-0.3
-- abstract-par-0.3.3
-- monad-par-extras-0.3.3
-- Only-0.1
-- erf-2.0.0.0
-- math-functions-0.2.1.0
-- monad-par-0.3.4.8
-- vector-binary-instances-0.2.4
-- vector-th-unbox-0.2.1.6
-- Glob-0.9.2
-- ansi-wl-pprint-0.6.8.2
-- cassava-0.5.1.0
-- code-page-0.1.3
-- js-flot-0.8.3
-- js-jquery-3.3.1
-- microstache-1.0.1.1
-- mwc-random-0.13.6.0
-- optparse-applicative-0.14.2.0
-- statistics-0.14.0.2
-- criterion-1.4.0.0
-- email-validate-2.3.2.3
-- integer-logarithms-1.0.2.1
-- dimensional-1.1
-- ieee754-0.8.0
-- securemem-0.1.10
-- bifunctors-5.5.2
-- uri-bytestring-0.3.1.1
-- primitive-0.6.3.0
-- vector-0.12.0.1
-- zlib-0.6.1.2
-- random-1.1
-- scientific-0.3.5.2
-- attoparsec-0.13.2.2
-- base-compat-0.9.3
-- dlist-0.8.0.4
-- tagged-0.8.5
-- th-abstraction-0.2.6.0
-- time-locale-compat-0.1.1.3
-- unordered-containers-0.2.9.0
-- uuid-types-1.0.3
-- old-locale-1.0.0.7
-- transformers-compat-0.6.0.6
-- aeson-1.2.4.0
-- blaze-html-0.9.0.1
-- blaze-markup-0.8.2.0
-- conduit-1.3.0
-- data-default-class-0.1.2.0
-- fast-logger-2.4.11
-- monad-logger-0.3.28.1
-- resourcet-1.2.0
-- semigroups-0.18.4
-- shakespeare-2.0.15
-- streaming-commons-0.1.19
-- wai-3.2.1.1
-- wai-extra-3.0.22.0
-- wai-logger-2.3.1
-- warp-3.2.17
-- yaml-0.8.28
-- yesod-core-1.6.1
-- yesod-form-1.6.1
-- yesod-persistent-1.6.0
-- ansi-terminal-0.8.0.1
-- async-2.2.1
-- auto-update-0.1.4
-- base64-bytestring-1.0.0.1
-- byteable-0.1.1
-- byteorder-1.0.4
-- bytestring-builder-0.10.8.1.0
-- case-insensitive-1.2.0.10
-- cereal-0.5.5.0
-- clientsession-0.9.1.2
-- conduit-extra-1.3.0
-- cookie-0.4.3
-- data-default-0.7.1.1
-- easy-file-0.2.1
-- exceptions-0.9.0
-- http-date-0.0.6.1
-- http-types-0.12.1
-- http2-1.6.3
-- iproute-1.7.2
-- lifted-base-0.2.3.11
-- monad-control-1.0.2.3
-- monad-loops-0.4.3
-- mono-traversable-1.0.8.1
-- network-2.6.3.3
-- network-uri-2.6.1.0
-- path-pieces-0.2.1
-- persistent-2.8.1
-- persistent-template-2.5.3.1
-- resource-pool-0.2.3.2
-- safe-0.3.16
-- simple-sendfile-0.2.27
-- stm-chans-3.0.0.4
-- stringsearch-0.3.6.6
-- transformers-base-0.4.4
-- unix-compat-0.5.0.1
-- unliftio-0.2.4.0
-- unliftio-core-0.1.1.0
-- vault-0.3.1.0
-- void-0.7.2
-- word8-0.1.3
-- xss-sanitize-0.3.5.7
-- aeson-compat-0.3.7.1
-- appar-0.1.4
-- cipher-aes-0.2.11
-- colour-2.3.4
-- cprng-aes-0.6.1
-- crypto-api-0.13.3
-- crypto-random-0.0.9
-- css-text-0.1.3.0
-- data-default-instances-containers-0.0.1
-- data-default-instances-dlist-0.0.1
-- data-default-instances-old-locale-0.0.1
-- entropy-0.4.1.1
-- psqueues-0.2.5.0
-- setenv-0.1.1.3
-- silently-1.2.5
-- skein-1.0.9.4
-- split-0.2.3.3
-- tagsoup-0.14.4
-- typed-process-0.2.1.0
-- utf8-string-1.0.1.1
-- vector-algorithms-0.7.0.1
-- attoparsec-iso8601-1.0.0.0
-- crypto-cipher-types-0.0.9
-- syb-0.7
-- th-orphans-0.13.5
-- cpphs-1.20.8
-- fail-4.9.0.0
-- memory-0.14.14
-- th-lift-0.7.8
-- th-lift-instances-0.1.11
-- th-reify-many-0.1.8
-- basement-0.0.7
-- foundation-0.0.20
-- old-time-1.1.0.3
-- polyparse-1.12
-- th-expand-syns-0.4.4.0
-- JuicyPixels-3.2.9.4
-- linear-1.20.7
-- mersenne-random-pure64-0.2.2.0
-- parallel-3.2.1.1
-- tf-random-0.5
-- yesod-1.6.0
-- adjunctions-4.4
-- base-orphans-0.6
-- bytes-0.15.3
-- distributive-0.5.3
-- exact-pi-0.4.1.3
-- lens-4.16
-- numtype-dk-0.5.0.1
-- reflection-2.1.3
-- semigroupoids-5.2.2
-- call-stack-0.1.0
-- comonad-5.0.3
-- contravariant-1.4.1
-- free-5
-- kan-extensions-5.1
-- profunctors-5.2.2
-- StateVar-1.1.0.4
-- happy-1.19.9
 
-resolver: ghc-8.4.1
+resolver: nightly-2018-03-17
 allow-newer: true
