Faster on all platforms is parListChunk + at most 8 cores for GC

--- a/cgraytrace.cabal
+++ b/cgraytrace.cabal
@@ -77,8 +77,8 @@ executable cgraytrace-exe
   hs-source-dirs:      App
   default-language:    Haskell2010
   
-  -- Assuming we have 15Mb L3 cache and gen0+ collections are interleaved with non-GC
-  ghc-options:         -Wall -threaded -O3 -optc-O3 -funfolding-use-threshold=16 -rtsopts "-with-rtsopts=-N -qb0"
+  -- gen0+ collections are interleaved with non-GC. 8 threads maximum for parallel GC (larger give worse results on many machines).
+  ghc-options:         -Wall -threaded -O3 -optc-O3 -funfolding-use-threshold=16 -rtsopts "-with-rtsopts=-N -A15m -qb0 -qn8"
 
 executable cgraytrace_prof_thread
   main-is:             Main.hs
@@ -94,7 +94,7 @@ executable cgraytrace_prof_thread
 
   hs-source-dirs:      App
   default-language:    Haskell2010
-  ghc-options:         -Wall -threaded -eventlog -rtsopts -O3 -optc-O3 -funfolding-use-threshold=16 "-with-rtsopts=-N -A15m -qb0 -ls -lf"
+  ghc-options:         -Wall -threaded -O3 -optc-O3 -funfolding-use-threshold=16 -rtsopts -eventlog "-with-rtsopts=-N -A15m -qb0 -qn8 -ls -lf"
 
   
 benchmark cgraytrace-bench
@@ -110,4 +110,4 @@ benchmark cgraytrace-bench
   hs-source-dirs:      App
   default-language:    Haskell2010
   
-  ghc-options:         -Wall -threaded -O3 -optc-O3 -funfolding-use-threshold=16 -rtsopts "-with-rtsopts=-N -qb0"
+  ghc-options:         -Wall -threaded -O3 -optc-O3 -funfolding-use-threshold=16 -rtsopts "-with-rtsopts=-N -A15m -qb0 -qn8"
