--- a/cgraytrace.cabal
+++ b/cgraytrace.cabal
@@ -31,7 +31,11 @@ library
                     , Raytracer 
                     , Scene
 
-  build-depends:       base,
+  build-depends:       liquid-base,
+                       liquid-containers,
+                       liquid-ghc-prim,
+                       liquid-prelude,
+                       liquidhaskell,
                        deepseq,
                        JuicyPixels,
                        linear,
@@ -42,14 +46,18 @@ library
                        
   hs-source-dirs:      Lib
   default-language:    Haskell2010
-  ghc-options:         -Wall -O2 -optc-O3 -funfolding-use-threshold=16
+  ghc-options:         -Wall -O2 -optc-O3 -funfolding-use-threshold=16 -Wno-unused-top-binds -Wno-missing-signatures -fplugin=LiquidHaskell
 
 executable cgraytrace-srv
   main-is:             Main.hs
 
 --  default-extensions:  
 
-  build-depends:       base
+  build-depends:       liquid-base,
+                       liquid-containers,
+                       liquid-ghc-prim,
+                       liquid-prelude,
+                       liquidhaskell
                      , cgraytrace
                      , yesod
                      , JuicyPixels
@@ -67,7 +75,11 @@ executable cgraytrace-exe
 
 --  default-extensions:  
 
-  build-depends:       base
+  build-depends:       liquid-base,
+                       liquid-containers,
+                       liquid-ghc-prim,
+                       liquid-prelude,
+                       liquidhaskell
                      , cgraytrace
                      , JuicyPixels
                      , tf-random
@@ -85,7 +97,11 @@ executable cgraytrace_prof_thread
 
 --  default-extensions:  
 
-  build-depends:       base
+  build-depends:       liquid-base,
+                       liquid-containers,
+                       liquid-ghc-prim,
+                       liquid-prelude,
+                       liquidhaskell
                      , cgraytrace
                      , JuicyPixels
                      , tf-random
@@ -101,7 +117,11 @@ benchmark cgraytrace-bench
   type:                exitcode-stdio-1.0
   main-is:             MainBench.hs
 
-  build-depends:       base
+  build-depends:       liquid-base,
+                       liquid-containers,
+                       liquid-ghc-prim,
+                       liquid-prelude,
+                       liquidhaskell
                      , cgraytrace
                      , tf-random
                      , mersenne-random-pure64
